--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,10 +22,13 @@ jobs:
             USER_NAME: goodffd
             USER_EMAIL: goodffd@gmail.com
           run: |
+            DATE_TIME=$(date "+%Y-%m-%d %H:%M:%S")
             git config --local user.name $USER_NAME
             git config --local user.email $USER_EMAIL
             git pull --unshallow
             git remote add upstream https://github.com/TBXark/ChatGPT-Telegram-Workers.git
+            git add -A
+            git commit -a -m "Configuration Files Generated on [$DATE_TIME]"
             git fetch upstream
             git checkout master
             git merge --no-edit upstream/master
