--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "*" ]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Sync"]
+    types:
+      - completed
 
 jobs:
   deploy:
