--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build Test
 
 on:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
+#  push:
+#    branches: [ "*" ]
+#  pull_request:
+#    branches: [ "*" ]
   workflow_dispatch:
   workflow_run:
     workflows: ["Sync"]
