--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -1,10 +1,13 @@
 name: Deploy to Cloudflare Workers
 
 on:
-  push:
-    branches: [ "master" ]
+#  push:
+#    branches: [ "master" ]
   workflow_dispatch:
-
+  workflow_run:
+    workflows: ["Build Test"]
+    types:
+      - completed
 jobs:
   deploy:
     runs-on: ubuntu-latest
