--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,5 +32,5 @@ jobs:
             git checkout master
             git merge --no-edit upstream/master
             git push origin master
-            git fetch upstream --tag
-            git push origin --tag
+            git fetch upstream --tags
+            git push origin --tags
